# dbt-scooters

./: README.md  catalog.json  dbt_project.yml  dependencies.yml  manifest.json  package-lock.yml  profiles.example.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_dbt.yml  deploy_docs.yml
dbt_scooters/: README.md  dbt_project.yml
dbt_scooters/.github/workflows/: deploy_docs.yml
dbt_scooters/macros/: properties.yml  updated_at.sql
dbt_scooters/models/: events_clean.sql  properties.yml  trips_age_daily.sql  users_full.sql
dbt_scooters/seeds/: properties.yml
dbt_scooters/tests/generic/: unique_key.sql
macros/: generate_schema_name.sql  properties.yml
models/: events_full.sql  events_stat.sql  first_name_sex.sql  properties.yml  sex_age_pivot.sql  trips_age_daily.sql  trips_age_group.sql  trips_stat.sql  trips_stat_daily.sql  users_class_monthly_trips.sql  users_class_stat.sql  users_class_weekly_destination_trips.sql  users_class_weekly_trips.sql  users_full.sql
models/finance/: properties.yml
models/metrics/: scooters_metrics.yml  trips_users_metrics.yml
seeds/: properties.yml
tests/generic/: unique_not_null.sql
