[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Kirill <fka@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
