[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Kirill <fka@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dbt-core = "^1.8.8"
dbt-postgres = "^1.8.2"
graphviz = "^0.20.3"
dbt-metricflow = "^0.8.1"
sqlfluff-templater-dbt = "3.3.0"
duckdb = "==1.3.0.dev1976"
duckdbt = "==0.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
